<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="activity" type="com.example.ktodosample.activity.AddTaskActivity"/>
        <variable name="taskModel" type="com.example.ktodosample.model.TaskModel"/>
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".activity.AddTaskActivity">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:padding="16dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/add_a_task"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

            <EditText
                    android:id="@+id/editTextTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/task"
                    android:text="@={taskModel.taskTitle}"/>

            <EditText
                    android:id="@+id/editTextDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:text="@={taskModel.taskDescription}" />

            <EditText
                    android:id="@+id/editTextFinishBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/finish_by"
                    android:text="@={taskModel.finishBy}" />

            <Button
                    android:id="@+id/button_save"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorPrimary"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/colorLight"
            android:onClick="@{(view) -> activity.saveTask(view)}"/>

        </LinearLayout>

    </RelativeLayout>
</layout>